Fixed bug that textbox was not align to hint
Fixed bug that textbox was not align to hint

--- a/src/css/TextBox.less
+++ b/src/css/TextBox.less
@@ -13,13 +13,20 @@
     display: inline-block;
     *display: inline;
 
+    @paddingVertical: 2px;
+    @paddingHorizon: 4px;
+    @borderWidth: 1px;
+
     input, textarea {
         color: #333;
-        padding: 2px 4px;
+        padding: @paddingVertical @paddingHorizon;
         font-size: 13px;
         background: #FFF;
-        border: 1px solid #a8adb6;
-        .input-outter-size(25px, 200px, 4px, 8px, 2px, 2px);
+        border: @borderWidth solid #a8adb6;
+        height: 19px;
+        line-height: 19px;
+        width: 200px;
+        .box-sizing(content-box);
         background-image: -webkit-gradient(linear, 0 0, 0 2, from(#ececec), to(#fff));
         background-image: -moz-linear-gradient(top, #ececec, #fff 2px, #fff);
         &:focus {
@@ -37,18 +44,22 @@
 
     .ui-textbox-hint {
         .inline-block ();
-        .box-sizing (border-box);
+        .box-sizing (content-box);
         background-color: #f2f2f2;
-        padding: 0 12px;
+        padding: @paddingVertical 12px;
         border: 1px solid #a8adb6;
         vertical-align: top;
+        height: 19px;
+        line-height: 19px;
     }
 
     .ui-textbox-placeholder {
         color: #999;
         position: absolute;
+        height: 19px;
+        line-height: 19px;
         left: 3px;
-        top: 6px;
+        top: @paddingVertical + @borderWidth;
     }
 
     .ui-textbox-placeholder-hidden {
